--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,35 +1,40 @@
 <h1>Burger Party!!!</h1>
-
-<h2>Burgers to Eat!</h2>
-
-<ul>
-    {{#each burgers}}
-        {{#unless devoured}}
-            <span> {{this.id}} - {{ this.burger_name}}</span>
-            <button type='button' class='devoured-button' id='devouredButton' data-id ='{{this.id}}'data-devouredBurger='{{devour}}'></button>
-        {{/unless}}
-    {{/each}}
-</ul>
-
-<h2>Burgers that have been Devoured!</h2>
-
-<ul>
-    {{#each burgers}}
-        {{#if devoured}}
-            <span> {{this.id}} - {{ this.burger_name}}</span>
-            <button type='button' class='delete-button' id='deleteButton' data-id ='{{this.id}}'data-devouredBurger='{{devour}}'></button>
-        {{/if}}
-    {{/each}}
-</ul>
-
-<h2>Add a Burger:</h2>
-
-<form class='create-form'>
-    <div class='form-group'>
-        <label for='bu'>Buger:</label>
-        <input type='text' id='bu' name='burger'>
+<div class='all-burgers'>
+    <div class='new-burgers'>
+        <h2>Burgers to Eat!</h2>
+            <ul class='uneaten'>
+                {{#each burger}}
+                    {{#unless devoured}}
+                        <span> {{this.id}} - {{ this.burger_name}}</span>
+                        <button type='button' class='devour-button' id='devouredButton' data-id ='{{this.id}}'data-devouredBurger='{{devour}}'>Devour!</button>
+                    {{/unless}}
+                {{/each}}
+            </ul>
     </div>
 
-    <button id='create' type='submit'>Create Burger</button>
+    <div class='devoured-burgers'>
+        <h2>Burgers that have been Devoured!</h2>
 
-</form>
+            <ul class='eaten'>
+                {{#each burger}}
+                    {{#if devoured}}
+                        <span> {{this.id}} - {{ this.burger_name}}</span>
+                        <button type='button' class='delete-button' id='deleteButton' data-id ='{{this.id}}'data-devouredBurger='{{devour}}'>Delete</button>
+                    {{/if}}
+                {{/each}}
+            </ul>
+    </div>
+</div>
+<div class='new-burger-form'>
+    <h2>Add a Burger:</h2>
+
+        <form class='create-form'>
+            <div class='form-group'>
+                <label for='bu'>Buger:</label>
+                <input type='text' id='bu' name='burger'>
+            </div>
+
+            <button id='create' class='create' type='submit'>Create Burger</button>
+
+        </form> 
+</div>
