--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
 		<title>Burger Party!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burger.js"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		{{{ body }}}
